# pintergreg.github.io

./: .gitignore  Gemfile  README.md  config.toml  conv.py  conv.rb  conv_bib.rb  cv_template.yml  generate_cv.rb  generate_qr_code.rb  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: main.yaml
blog/: index.html  index.xml
business_card/: index.html
categories/: index.xml
content/: about.md  business_card.md  cv.md  publications.md  talks.md
cv/: index.asciidoc  index.html  index.typ
data/: CV_Pinter_20220722.xml
data/awards/: bridge_grant.yaml  ou_stem.yaml  sobigdata.yaml
data/publications/: juhasz2023amenity.yaml  pinter2020artificial.yaml  pinter2021analyzing.yaml  pinter2021evaluating.yaml  pinter2022awakening.yaml  pinter2022commuting.yaml  pinter2024revealing.yaml  pinter2025quantifying.yaml
data/ris/: ijgi-v10-i05_20220726.yaml  information-v12-i11_20220726.yaml  information-v13-i03_20220726.yaml
data/talks/: ccs_2024.yaml  kti70.yaml  netmob_2023.yaml  netsci_2023.yaml
data/teaching/: software_development.yaml  software_development_at_multinational_companies.yaml
for_students/: index.html  index.xml
for_students/human_mobility_prediction/: index.html
for_students/inequality_in_public_transport/: index.html
for_students/visualizing_spatiotemporal_data/: index.html
lib/ref_parsers/: version.rb
publications/: index.asciidoc  index.html
resources/ris/: 10.1038_s41598-024-82006-5-citation.ris  10.1140_epjds_s13688-023-00413-6-citation.ris  entropy-v22-i12_20230526.ris  (+5 more)
tags/: index.xml
talks/: index.html
(+29 files in other folders)
