[tool.poetry]
name = "pintergreg-github-io"
version = "0.1.0"
description = ""
authors = ["pintergreg <pintergreg@gmail.com>"]
readme = "README.md"
# packages = [{include = "convert_references"}]

[tool.poetry.dependencies]
python = "^3.11"
rispy = "^0.7.1"
pyaml = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
