[tool.poetry]
name = "pintergreg-github-io"
version = "0.1.0"
description = ""
authors = ["pintergreg <pintergreg@gmail.com>"]
readme = "README.md"
# packages = [{include = "convert_references"}]

[tool.poetry.dependencies]
python = "^3.11"
rispy = "^0.7.1"
pyaml = "^24.4.0"
pandas = "^2.2.2"
networkx = "^3.3"
seaborn = "^0.13.2"
scipy = "^1.13.0"

# [tool.poetry.group.dev.dependencies]
# ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
