[tool.poetry]
name = "pintergreg-github-io"
version = "0.1.0"
description = ""
authors = ["pintergreg <pintergreg@gmail.com>"]
readme = "README.md"
# packages = [{include = "convert_references"}]

[tool.poetry.dependencies]
python = "^3.13"
rispy = "^0.9"
pyyaml = "^6.0"
pyaml = "^25.1"
pandas = "^2.2.3"
networkx = "^3.4"
seaborn = "^0.13.2"
scipy = "^1.14"

# [tool.poetry.group.dev.dependencies]
# ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
